# halva-test-example

./: .gitignore  Makefile  README.md  customSpecRaw.json  halva.js  halvaSpec.json
node/: Cargo.toml
node/src/: service.rs
runtime/src/: lib.rs
substrate/: Cargo.toml  Makefile  README.md  customSpec.json
substrate/pallets/token/: Cargo.toml
substrate/pallets/token/src/: lib.rs
substrate/runtime/: Cargo.toml
test/: example.test.js  example.ts
tests/: token.test.ts
