[package]
name = "pallet-token"
version = "2.0.0-rc2"
authors = ["ByKeks"]
edition = "2018"
license = "GPL-3.0"
description = "FRAME asset management pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc2'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc2'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'frame-system'
tag = 'v2.0.0-rc2'

[dev-dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc2'

[dev-dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc2'

[dev-dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc2'

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
